# real-estate-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.frontend/: package.json
.frontend/config/: tools.json
app/: observability.py
app/api/routers/: chat.py  models.py  vercel_response.py
app/engine/: engine.py  generate.py
app/services/: utils.py
config/: tools.yaml
data/data/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
mobile_frontend/chatbot/: pubspec.yaml
mobile_frontend/chatbot/android/: settings.gradle
